Finish side nav bar design

--- a/index.html
+++ b/index.html
@@ -13,22 +13,26 @@
     <body>
         <div id="page-layout">
             <div id="sidebar">
-                <div id="sidebar-hero">
-                    <h2><i class="fa fa-solid fa-chess-board"></i> Dashboard</h3>
+
+                <div id="sidebar-hero" class="side-div">
+                    <h2><i class="fa fa-solid fa-chess-board hero-icon"></i> Dashboard</h3>
                 </div>
-                <div id="side-nav">
-                    <p class="side-nav-item"><i class="fa fa-solid fa-house-chimney"></i>Home</p>
-                    <p class="side-nav-item"><i class="fa fa-solid fa-address-card"></i>Profile</p>
-                    <p class="side-nav-item"><i class="fa fa-solid fa-message"></i>Messages</p>
-                    <p class="side-nav-item"><i class="fa fa-solid fa-clock"></i>History</p>
-                    <p class="side-nav-item"><i class="fa fa-solid fa-list-check"></i>Tasks</p>
-                    <p class="side-nav-item"><i class="fa fa-solid fa-people-group"></i>Communities</p>
+
+                <div id="side-nav" class="side-div">
+                    <p class="side-nav-item"><i class="fa fa-solid fa-house-user icon"></i>Home</p>
+                    <p class="side-nav-item"><i class="fa fa-solid fa-address-card icon"></i>Profile</p>
+                    <p class="side-nav-item"><i class="fa fa-solid fa-mobile icon"></i>Messages</p>
+                    <p class="side-nav-item"><i class="fa fa-solid fa-clock icon"></i>History</p>
+                    <p class="side-nav-item"><i class="fa fa-solid fa-pencil icon"></i>Tasks</p>
+                    <p class="side-nav-item"><i class="fa fa-solid fa-people-arrows icon"></i>Communities</p>
                 </div>
-                <div id="side-settings">
-                    <p class="side-nav-item"><i class="fa fa-solid fa-gear"></i>Home</p>
-                    <p class="side-nav-item"><i class="fa fa-solid fa-question"></i>Profile</p>
-                    <p class="side-nav-item"><i class="fa fa-solid fa-shield"></i>Messages</p>
+
+                <div id="side-settings" class="side-div">
+                    <p class="side-nav-item"><i class="fa fa-solid fa-gear icon"></i>Home</p>
+                    <p class="side-nav-item"><i class="fa fa-solid fa-question icon"></i>Profile</p>
+                    <p class="side-nav-item"><i class="fa fa-solid fa-shield icon"></i>Privacy</p>
                 </div>
+
             </div>
 
             <div id="header">
