FLush out header

--- a/index.html
+++ b/index.html
@@ -36,7 +36,41 @@
             </div>
 
             <div id="header">
-                <h1>Name Here</h1>
+                <div id="search-bar">
+                    <div id="search-left">
+                        <div id="search-icon">
+                            <img src="assets/icons/search.png">
+                        </div>
+                        <input type="text" class="search-bar">
+                    </div>
+                    <div id="search-right">
+                        <div id="bell-icon">
+                            <img src="assets/icons/bell.png">
+                        </div>
+                        <div id="search-user-icon">
+                            <img src="assets/icons/user.png">
+                        </div>
+                        <div>
+                            <p> Austin Hogan</p>
+                        </div>
+                    </div>
+                </div>
+                <div id="profile-bar">
+                    <div id="profile-left">
+                        <div id="profile-icon">
+                            <img src="assets/icons/user-big.png">
+                        </div>
+                        <div id="profile-intro">
+                            <p>Hi there,</p>
+                            <h3>Austin Hogan @Chosen</h3>
+                        </div>
+                    </div>
+                    <div id="profile-btns">
+                        <button>New</button>
+                        <button>Upload</button>
+                        <button>Share</button>
+                    </div>
+                </div>
             </div>
 
             <div id="main-content">
@@ -46,5 +80,8 @@
 
 
     </body>
+
+    <footer><a href="https://www.flaticon.com/free-icons/search" title="search icons">Search icons created by Royyan
+            Wijaya - Flaticon</a></footer>
 
 </html>
