Use grid to layout main content section

--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
                 </div>
 
             </div>
-
             <div id="header">
                 <div id="search-bar">
                     <div id="search-left">
@@ -72,13 +71,76 @@
                     </div>
                 </div>
             </div>
-
             <div id="main-content">
-                <h1>Main Content</h1>
+                <div id="projects" class="main-div">
+                    <h2>Your Projects</h2>
+                    <div>
+                        <div class="project-card">
+                            <h4>Super Cool Project</h4>
+                            <text>Text</text>
+                        </div>
+                        <div class="project-card">
+                            <h4>Less Cool Project</h4>
+                            <text>Text</text>
+                        </div>
+                        <div class="project-card">
+                            <h4>Impossible App</h4>
+                            <text>Text</text>
+                        </div>
+                        <div class="project-card">
+                            <h4>Easy Peasy App</h4>
+                            <text>Text</text>
+                        </div>
+                        <div class="project-card">
+                            <h4>Ad Blocker</h4>
+                            <text>Text</text>
+                        </div>
+                        <div class="project-card">
+                            <h4>Money Maker</h4>
+                            <text>Text</text>
+                        </div>
+                    </div>
+                </div>
+                <div id="announcements" class="main-div">
+                    <h2>Announcements</h2>
+                    <div id="announcements">
+                        <div class="announcement-card">
+                            <h4>Site Maintenance</h4>
+                            <p>Text</p>
+                        </div>
+                        <div class="announcement-card">
+                            <h4>Community Share Day</h4>
+                            <p>Text</p>
+                        </div>
+                        <div class="announcement-card">
+                            <h4>Updated Privacy Policy</h4>
+                            <p>Text</p>
+                        </div>
+                    </div>
+                </div>
+                <div id="trending" class="main-div">
+                    <h2>Trending</h2>
+                    <div id="trending">
+                        <div class="trend">
+                            <h4>@tegan</h4>
+                            <p>World Peace Builder</p>
+                        </div>
+                        <div class="trend">
+                            <h4>@morgan</h4>
+                            <p>Super COol Project</p>
+                        </div>
+                        <div class="trend">
+                            <h4>@kendall</h4>
+                            <p>Life Changing App</p>
+                        </div>
+                        <div class="trend">
+                            <h4>@alex</h4>
+                            <p>No Traffic Maker</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-
-
     </body>
 
     <footer><a href="https://www.flaticon.com/free-icons/search" title="search icons">Search icons created by Royyan
