--- a/index.html
+++ b/index.html
@@ -74,30 +74,67 @@
             <div id="main-content">
                 <div id="projects" class="main-div">
                     <h2>Your Projects</h2>
-                    <div>
+                    <div id="project-cards">
                         <div class="project-card">
                             <h4>Super Cool Project</h4>
-                            <text>Text</text>
+                            <p>A wonderful serenity has taken possession of my entire soul, like these sweet
+                                mornings of
+                                spring which I enjoy with my whole heart.</p>
+                            <div class="project-icons">
+                                <div><i class="fa fa-solid fa-star fav"></i></div>
+                                <div><i class="fa fa-regular fa-eye watch"></i></div>
+                                <div><i class="fa fa-solid fa-share share"></i></div>
+                            </div>
                         </div>
                         <div class="project-card">
                             <h4>Less Cool Project</h4>
-                            <text>Text</text>
+                            <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of
+                                spring which I enjoy with my whole heart.</p>
+                            <div class="project-icons">
+                                <div><i class="fa fa-solid fa-star fav"></i></div>
+                                <div><i class="fa fa-regular fa-eye watch"></i></div>
+                                <div><i class="fa fa-solid fa-share share"></i></div>
+                            </div>
                         </div>
                         <div class="project-card">
                             <h4>Impossible App</h4>
-                            <text>Text</text>
+                            <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of
+                                spring which I enjoy with my whole heart.</p>
+                            <div class="project-icons">
+                                <div><i class="fa fa-solid fa-star fav"></i></div>
+                                <div><i class="fa fa-regular fa-eye watch"></i></div>
+                                <div><i class="fa fa-solid fa-share share"></i></div>
+                            </div>
                         </div>
                         <div class="project-card">
                             <h4>Easy Peasy App</h4>
-                            <text>Text</text>
+                            <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of
+                                spring which I enjoy with my whole heart.</p>
+                            <div class="project-icons">
+                                <div><i class="fa fa-solid fa-star fav"></i></div>
+                                <div><i class="fa fa-regular fa-eye watch"></i></div>
+                                <div><i class="fa fa-solid fa-share share"></i></div>
+                            </div>
                         </div>
                         <div class="project-card">
                             <h4>Ad Blocker</h4>
-                            <text>Text</text>
+                            <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of
+                                spring which I enjoy with my whole heart.</p>
+                            <div class="project-icons">
+                                <div><i class="fa fa-solid fa-star fav"></i></div>
+                                <div><i class="fa fa-regular fa-eye watch"></i></div>
+                                <div><i class="fa fa-solid fa-share share"></i></div>
+                            </div>
                         </div>
                         <div class="project-card">
                             <h4>Money Maker</h4>
-                            <text>Text</text>
+                            <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of
+                                spring which I enjoy with my whole heart.</p>
+                            <div class="project-icons">
+                                <div><i class="fa fa-solid fa-star fav"></i></div>
+                                <div><i class="fa fa-regular fa-eye watch"></i></div>
+                                <div><i class="fa fa-solid fa-share share"></i></div>
+                            </div>
                         </div>
                     </div>
                 </div>
