Announcements section completed

--- a/index.html
+++ b/index.html
@@ -140,14 +140,16 @@
                 </div>
                 <div id="announcements" class="main-div">
                     <h2>Announcements</h2>
-                    <div id="announcements">
+                    <div class="announcements">
                         <div class="announcement-card">
                             <h4>Site Maintenance</h4>
                             <p>Text</p>
+                            <hr>
                         </div>
                         <div class="announcement-card">
                             <h4>Community Share Day</h4>
                             <p>Text</p>
+                            <hr>
                         </div>
                         <div class="announcement-card">
                             <h4>Updated Privacy Policy</h4>
