Trending section created

--- a/index.html
+++ b/index.html
@@ -159,22 +159,42 @@
                 </div>
                 <div id="trending" class="main-div">
                     <h2>Trending</h2>
-                    <div id="trending">
+                    <div class="trending">
                         <div class="trend">
-                            <h4>@tegan</h4>
-                            <p>World Peace Builder</p>
+                            <div class="trend-left">
+                                <img src="assets/icons/man.png" />
+                            </div>
+                            <div class="trend-right">
+                                <h4>@tegan</h4>
+                                <p>World Peace Builder</p>
+                            </div>
                         </div>
                         <div class="trend">
-                            <h4>@morgan</h4>
-                            <p>Super COol Project</p>
+                            <div class="trend-left">
+                                <img src="assets/icons/gamer.png" />
+                            </div>
+                            <div class="trend-right">
+                                <h4>@tegan</h4>
+                                <p>World Peace Builder</p>
+                            </div>
                         </div>
                         <div class="trend">
-                            <h4>@kendall</h4>
-                            <p>Life Changing App</p>
+                            <div class="trend-left">
+                                <img src="assets/icons/girl.png" />
+                            </div>
+                            <div class="trend-right">
+                                <h4>@tegan</h4>
+                                <p>World Peace Builder</p>
+                            </div>
                         </div>
                         <div class="trend">
-                            <h4>@alex</h4>
-                            <p>No Traffic Maker</p>
+                            <div class="trend-left">
+                                <img src="assets/icons/cat.png" />
+                            </div>
+                            <div class="trend-right">
+                                <h4>@tegan</h4>
+                                <p>World Peace Builder</p>
+                            </div>
                         </div>
                     </div>
                 </div>
