Admin dashboard finished

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
         </div>
     </body>
 
-    <footer><a href="https://www.flaticon.com/free-icons/search" title="search icons">Search icons created by Royyan
-            Wijaya - Flaticon</a></footer>
+    <!-- <footer><a href="https://www.flaticon.com/free-icons/search" title="search icons">Search icons created by Royyan
+            Wijaya - Flaticon</a></footer> -->
 
 </html>
